prevented mousepointer from getting stuck on map
also moved the adding of map tiles to the top so that the map is loaded first and then the pins

--- a/theme/css/standortkarte.css
+++ b/theme/css/standortkarte.css
@@ -1,15 +1,46 @@
-#map, .leaflet-container {
-  width: 100%;
-  aspect-ratio: 1.7;
+#map,
+.leaflet-container {
+    width: 100%;
+    aspect-ratio: 1.7;
 }
 
 .leaflet-container {
-  max-width: 100%;
-  max-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+}
+
+#map.deactivated {
+    pointer-events: none;
+}
+
+#map.deactivated .leaflet-control-container {
+    display: none;
+}
+
+#map.deactivated>* {
+    opacity: 0.4;
+}
+
+#map.deactivated::after {
+    content: 'Klicken Sie, um die Karte zu aktivieren';
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-size: 1.5em;
+    padding-top: calc(55% / 1.7 - 1em);
+    text-align: center;
+    /* Add an icon here:
+    background: url("");
+    background-repeat: no-repeat;
+    background-position: 50% calc(45% / 1.7 - 1em);
+    background-size: 8%;
+    */
+    background-color: black;
 }
 
 .site button {
-  display: block;
-  margin-top: 0.4em;
-  max-width: 100%;
+    display: block;
+    margin-top: 0.4em;
+    max-width: 100%;
 }
